--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,8 @@
-<p>home works!</p>
 <app-greeting [message]="message" />
+<app-counter [incrementValue]="incrementValue()" />
+<input
+  type="number"
+  placeholder="Type something..."
+  (keyup)="keyUpHandler($event)"
+  [(ngModel)]="incrementValue"
+/>
