--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,8 @@
 <header>
   <nav>
-    <h1>{{ title() }}</h1>
+    <h1 routerLink="/">{{ title() }}</h1>
+    <ul>
+      <li routerLink="/todos">Todos</li>
+    </ul>
   </nav>
 </header>
